# pokemantle

./: .editorconfig  .gitignore  .gitmodules  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
backend/: Dockerfile  main.py  models.py  pyproject.toml
backend/app/: export_old_secret.py  main.py  models.py  poke2vec.py
data/: datapackage.yaml  name_map.csv  old_secret.csv  pokedex.csv
frontend/: .prettierrc  Dockerfile  app.vue  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js
frontend/assets/css/: tailwind.css
frontend/components/: ArrowIcon.vue  Faq.vue  FaqItem.vue  GuessInput.vue  GuessResult.vue  GuessResultRow.vue  MenuBar copy.vue  MenuBar.vue  MoonIcon.vue  PokemonInfo.vue  PokemonInfoBlock.vue  PokemonInfoTag.vue  Share.vue  SunIcon.vue
frontend/composables/: actions.ts  apis.ts  fluent.ts  models.ts  states.ts  utils.ts
frontend/i18n/: en.ftl  ko.ftl
frontend/layouts/: default.vue
frontend/pages/: 404.vue  index.vue
frontend/pages/rank/[puzzle_number]/: [base64_english_name].vue
frontend/plugins/: fluent.ts  gtag.client.ts  lazyload.ts
images/: nginx.conf
