[tool.poetry]
name = "pokemantle"
version = "0.1.0"
description = "Pokémon guessing game inspired by Semantle"
authors = ["Nesswit <rishubil@gmail.com>"]
license = "MIT"
packages = [
    { include="backend", from="." },
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.1"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
pandas = "^1.4.2"
scikit-learn = "^1.0.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "backend.main:start"
